# embassy_learn

docs/examples/basic/.cargo/: config.toml
examples/stm32f4/: Cargo.toml  Makefile
examples/stm32f401re/: Cargo.toml  Makefile  linker.ld
examples/stm32f401re/.cargo/: config.toml
examples/stm32f401re/src/: main.rs
