[package]
edition = "2021"
name = "embassy-stm32f4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = ["defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { version = "0.6.0", path = "../../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../../embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.2.0", path = "../../embassy-usb", features = ["defmt" ] }
embassy-net = { version = "0.4.0", path = "../../embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-futures = { version = "0.1.0", path = "../../embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.7.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}

[profile.release]
debug = 2



# [dependencies]
# embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32" , features = ["defmt","memory-x","unstable-pac","stm32f429zi", "time-driver-tim3"] }
# embassy-executor = { version = "0.5.0", path = "../../embassy-executor" , features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread","executor-interrupt"] }
# embassy-time = { version = "0.3.0",  path = "../../embassy-time" , features = ["tick-hz-48_000_000","defmt"] }
# stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-59b1f65bd109c3ef35782e6c44062208d0ef3d0e" }
# embassy-hal-internal = {version = "0.1.0", features = ["cortex-m", "prio-bits-4"] }

# defmt = "0.3"
# defmt-rtt = "0.4"

# cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
# cortex-m-rt = "0.7.0"
# panic-probe = { version = "0.3", features = ["print-defmt"] }
# static_cell = "2"

# [patch.crates-io]
# # embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
# # embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
# # embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
# embassy-hal-internal =  {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}

# [profile.release]
# opt-level = 0
# debug = 2
