[package]
edition = "2021"
name = "embassy-stm32f401re-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = ["defmt","stm32f401re", "time-driver-any"] }
embassy-executor = { version = "0.5.0", path = "../../embassy-executor", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.3.0", path = "../../embassy-time", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"


cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
